# fishai-engine

./: Cargo.toml  README.md
src/: api.rs  chat.rs  gguf.rs  http.rs  kv_cache.rs  lib.rs  main.rs  memory.rs  model.rs  prompt.rs  quant.rs  quantize.rs  sampling.rs  tensor.rs  thinking.rs  tokenizer.rs
